# fasta-shuffler

./: Cargo.toml
src/: fasta.rs  main.rs
